# causalab

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  README_NEW.md  pyproject.toml
.basedpyright/: baseline.json
.claude/skills/development-session/: SKILL.md
.claude/skills/document-issues/: SKILL.md
.claude/skills/getting-started/: SKILL.md
.claude/skills/interpret-experiment/: REPORT_TEMPLATE.md  SKILL.md
.claude/skills/plan-experiment/: ANALYSIS_GUIDE.md  PLAN_TEMPLATE.md  RESEARCH_OBJECTIVE_TEMPLATE.md  SKILL.md
.claude/skills/replicate-paper/: SKILL.md
.claude/skills/research-session/: CONVENTIONS.md  SKILL.md
.claude/skills/run-experiment/: COMMON_PROBLEMS.md  SKILL.md
.claude/skills/setup-analyses/: SET_UP_ANALYSIS_TEMPLATE.md  SKILL.md
.claude/skills/setup-methods/: SET_UP_METHOD_TEMPLATE.md  SKILL.md
.claude/skills/setup-task/: SKILL.md  TASK_TEMPLATE.md
.github/workflows/: claude-code-review.yml  claude.yml  test.yml
causalab/analyses/activation_manifold/: README.md  fitting_pipeline.py  loading.py  main.py  utils.py
causalab/analyses/attention_pattern/: README.md  __init__.py  main.py
causalab/analyses/baseline/: README.md  __init__.py  main.py
causalab/analyses/feature_geometry/: __init__.py  main.py
causalab/analyses/locate/: README.md  __init__.py  dbm_binary.py  main.py  run_interchange.py
causalab/analyses/output_manifold/: README.md  main.py
causalab/analyses/path_steering/: __init__.py  main.py  path_mode.py  path_visualization.py  registry.py
causalab/analyses/pullback/: README.md  __init__.py  main.py  (+1 more)
causalab/causal/: __init__.py  causal_model.py  causal_utils.py  causal_viz.py  counterfactual_dataset.py  trace.py
causalab/configs/: base.yaml  config.yaml  train_config.py
causalab/experiments/: __init__.py  download_models.py  filter.py  interchange_targets.py  io.py  metric.py  train.py
causalab/io/: __init__.py  artifacts.py  configs.py  counterfactuals.py  nested_artifacts.py  pipelines.py  sklearn_pca.py
causalab/methods/: __init__.py  attention_pattern_analysis.py  distances.py  dual_steering.py  feature_geometry.py  filter.py  metric.py  pca.py  probes.py  sae.py  standardize.py  umap.py
causalab/neural/: LM_units.py  __init__.py  featurizer.py  featurizers.py  model_units.py  pipeline.py  token_position_builder.py  token_positions.py  units.py
causalab/runner/: helpers.py  post_steps.py  run_exp.py  run_pipeline.sh  slurm_args.py
causalab/tasks/: README.md  __init__.py  loader.py
demos/: causal_model_demo.ipynb  weekdays_geometry.ipynb
demos/onboarding_tutorial/: 01_define_MCQA_task.ipynb  02_trace_residual_stream.ipynb  03_localize_with_patching.ipynb  04_train_DAS_and_DBM.ipynb  05_PCA_DBM_DAS.ipynb  06_boundless_DAS.ipynb  07_cross_model_patch.ipynb
docs/: new_pipeline.md
notebooks/: dual_steering_scratch.ipynb  three_class_dual_steering_scratch.ipynb
scripts/: check_mps.py  completion.bash  completion.zsh  htmlcov.sh  run_exp.sh
tests/: __init__.py  conftest.py  test_LM_units.py  test_attention_pattern_analysis.py  test_causal_model.py  test_causal_utils.py  test_counterfactual_dataset.py  test_counterfactual_utils.py  test_feature_geometry_probes.py  test_featurizers.py  test_filter_experiment.py  test_flow_smoke.py  test_invertibility.py  test_io_artifacts.py  test_is_original_flag.py  test_logdet_consistency.py  test_manifold.py  test_model_units.py  test_pipeline.py  test_residual_stream_layer_indexing.py  test_run_interchange_arrow_syntax.py  test_target_builders.py  test_token_position_builder.py
tests/integration/: __init__.py  conftest.py  test_01_mcqa_task_definition.py  test_02_residual_stream_tracing.py  test_03_localization_with_patching.py  test_DAS_and_DBM_integration.py
tests/test_experiments/: __init__.py  test_boundless.py  test_comparison_fns.py  test_distances.py  test_dual_manifold.py  test_interchange.py  test_isometry_metric.py  test_multi_token.py  test_path_quality.py  test_steer_manifold.py  test_subspace.py  test_task_loader.py  test_token_variants.py  test_train.py  test_visualizations.py
tests/test_graph_walk/: test_causal_model.py  test_config.py  test_graphs.py  test_interchange_grid.py  test_manifold_steering.py
tests/test_methods/: conftest.py  test_batched_interchange.py  test_collect_features.py  test_empty_feature_indices_regression.py  test_interpolate.py  test_model_management.py  test_prepare_intervenable_inputs.py  test_prepare_intervenable_model.py  test_run_interchange_intervention.py  test_steer.py  test_train_intervention.py
tests/test_natural_domains_arithmetic/: test_causal_models.py
tests/test_pyvene_core/: conftest.py  test_batched_interchange.py  test_collect_features.py  test_empty_feature_indices_regression.py  test_model_management.py  test_prepare_intervenable_inputs.py  test_prepare_intervenable_model.py  test_run_interchange_intervention.py  test_train_intervention.py
tests/test_spline_manifold/: test_cubic.py  test_cubic_vs_tps_periodic.py  test_manifold.py  test_pca.py  test_periodic.py
(+232 files in other folders)
