[project]
name = "causalab"
version = "0.0.1"
description = "A toolkit for causal analysis of artificial neural networks."
authors = [
    { name = "Atticus Geiger" },
    { name = "Max Loeffler"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "networkx",
    "matplotlib",
    "pandas",
    "numpy",
    "pyvene",
    "scikit-learn",
    "ipywidgets",
    "jupyterlab",
    "ipycytoscape",
    "seaborn",
    "transformers",
    "tensorboard",
    "dash",
    "dash-cytoscape",
    "jupyter-dash",
    "rich",
    "nnsight>=0.5.9",
    "ipykernel>=7.0.1",
]

[tool.uv.sources]
pyvene = { git = "https://github.com/stanfordnlp/pyvene.git", branch = "main" }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU",
]
testpaths = ["tests", "causalab/tasks/MCQA/tests"]
norecursedirs = [".venv", "__pycache__"]

[tool.coverage.run]
omit = [
    "tests/*",
    "demos/*",
    "causalab/tasks/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.uv.build-backend]
module-name = ["causalab"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "ruff",
    "pre-commit>=4.4.0",
    "basedpyright",
    "scikit-learn-stubs",
    "pandas-stubs",
]

[tool.ruff]
# target-version inferred from project.requires-python
exclude = [
    "**/__pycache__",
    "**/.venv",
    ".venv",
    # Exclude all tasks except MCQA
    "causalab/tasks/entity_binding",
    "causalab/tasks/IOI",
    "causalab/tasks/general_addition",
]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
exclude = [
    "**/__pycache__",
    "**/.venv",
    ".venv",
    # Exclude all tasks except MCQA
    "causalab/tasks/entity_binding",
    "causalab/tasks/IOI",
    "causalab/tasks/general_addition",
]
# Disable cascading inference rules to avoid untyped code propagating errors
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
