[project]
name = "causalab"
version = "0.0.1"
description = "A toolkit for causal analysis of artificial neural networks."
authors = [
    { name = "Atticus Geiger" },
    { name = "Max Loeffler"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "networkx",
    "matplotlib",
    "pandas",
    "numpy",
    "pyvene",
    "scikit-learn",
    "ipywidgets",
    "jupyterlab",
    "ipycytoscape",
    "seaborn",
    "transformers",
    "safetensors",
    "tensorboard",
    "dash",
    "dash-cytoscape",
    "jupyter-dash",
    "claude-agent-sdk>=0.1.9",
    "rich",
    "nnsight>=0.5.9",
    "ipykernel>=7.0.1",
    "umap-learn>=0.5.0",
    "hydra-core>=1.3.0",
    "pot>=0.9.0",
]

[tool.uv.sources]
pyvene = { git = "https://github.com/stanfordnlp/pyvene.git", branch = "main" }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU",
]
testpaths = ["tests"]
norecursedirs = ["causalab/agents/refs", ".venv", "__pycache__"]

[tool.coverage.run]
omit = [
    "tests/*",
    "demos/*",
    "causalab/tasks/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.uv.build-backend]
module-name = ["causalab"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff",
    "pre-commit>=4.4.0",
    "basedpyright",
    "scikit-learn-stubs",
    "pandas-stubs",
    "ipdb>=0.13.13",
]

[tool.ruff]
# target-version inferred from project.requires-python
exclude = [
    "agents/refs/**",
    "**/__pycache__",
    "**/.venv",
    ".venv",
    # Jinja templates rendered by setup-* skills — not valid Python on disk
    ".claude/skills/setup-methods/templates",
    ".claude/skills/setup-analyses/templates",
]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
exclude = [
    "agents/refs/**",
    "**/__pycache__",
    "**/.venv",
    ".venv",
    # Jinja templates rendered by setup-* skills — not valid Python on disk
    ".claude/skills/setup-methods/templates",
    ".claude/skills/setup-analyses/templates",
]
# Disable cascading inference rules to avoid untyped code propagating errors
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
